welcome.lessons.welcome.bat.bool2.LessBy10.scala.error
lessBy10:2: error: ';' expected but integer literal found.
  if (a>b) {if (a-b)>=10 {return true}} 
                      ^