welcome.lessons.welcome.bat.bool2.LessBy10.scala.code
def lessBy10(a:Int, b:Int, c:Int):Boolean = {
  if (a>b) {if (a-b)>=10 {return true}} 
  else if (b>a) {if ((b-a)>=10) {return true}}
	else if (a>c) {if ((a-c)>=10) {return true}}
	else if (c>a) {if ((c-a)>=10) {return true}}
	else if (b>c) {if ((b-c)>=10) {return true}}
	else if (c>b) {if ((c-b)>=10) {return true}}
	else {return false}
}